<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/main_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        style="@style/AppTheme"
        android:textSize="@dimen/abc_text_size_title_material"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunshine"
        android:id="@+id/button_sunshine"
        android:layout_marginTop="84dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textColor="@color/White"
        style="@style/CodeFont"
        android:onClick="launchApplication"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media_streamer"
        android:id="@+id/button"
        android:layout_below="@+id/button_sunshine"
        android:layout_centerHorizontal="true"
        android:textColor="@color/White"
        style="@style/CodeFont"
        android:onClick="launchApplication"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_duo_1"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:textColor="@color/White"
        style="@style/CodeFont"
        android:onClick="launchApplication" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_duo_2"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:textColor="@color/White"
        style="@style/CodeFont"
        android:onClick="launchApplication"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ant_terminator"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:textColor="@color/White"
        style="@style/CodeFont"
        android:onClick="launchApplication" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/materialize"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:textColor="@color/White"
        style="@style/CodeFont"
        android:onClick="launchApplication" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:textColor="@color/White"
        style="@style/CodeFont"
        android:background="#B71C1C"
        android:layout_below="@+id/button5"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:onClick="launchApplication" />

</RelativeLayout>
